--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Andy Likuski">
     <link rel="shortcut icon" type="image/x-icon" href="/images/rescape-icon-320.png" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"></link>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0/leaflet.css">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <script>window.html5 || document.write('<script src="js/html5s\
@@ -15,14 +16,8 @@ hiv.js"><\/script>')</script>
     <![endif]-->
 </head>
 <body>
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</s\
-    trong> browser. Please <a href="http://browsehappy.com/">upgrade your \
-        browser</a> to improve your experience.</p>
-<![endif]-->
-<div id="app"></div>
-<script src="https://apis.google.com/js/client.js?onload=init"></script>
-<!-- Disqus comment link. This isn't included by the react-disqus-thread module -->
-<script id="dsq-count-scr" src="//rescapes.disqus.com/count.js" async></script>
+    <div id='root'>
+    </div>
+    <script src="/static/index.js"></script>
 </body>
 </html>
