--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="description" content="Technology-enhanced urban planning">
     <meta name="author" content="Andy Likuski">
     <link rel="shortcut icon" type="image/x-icon" href="/images/rescape-icon-320.png" />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"></link>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0/leaflet.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <script>window.html5 || document.write('<script src="js/html5s\
