--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rescape</title>
     <meta name="description" content="Technology-enhanced urban planning">
     <meta name="author" content="Andy Likuski">
-    <link rel="shortcut icon" type="image/x-icon" href="/images/rescape-icon-320.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/data/rescape-icon-320.png" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
